# embeddedProject

integration/: CMakeLists.txt  TestSuite.cpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt  SendingInterface.h
src/connectionManager/: CMakeLists.txt  MsgHelper.cpp  MsgHelper.h  MsgMerger.cpp  MsgMerger.h
src/connectionManager/ut/: CMakeLists.txt  TestSuite.cpp
src/i2c/: CMakeLists.txt  I2cInterface.h
src/uart/: CMakeLists.txt  UARTInterface.h
system/: RoundTrip.h  main.cpp
system/arduino/app/: app.ino
whole/: CMakeLists.txt
whole/common/: CMakeLists.txt  CommonTypes.h  ReceivingInterface.h
whole/connectionManager/: CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.h
whole/i2c/: CMakeLists.txt  I2cInterface.cpp
whole/system/: CMakeLists.txt  RoundTrip.cpp
whole/uart/: CMakeLists.txt  UARTInterface.cpp
